--- a/css/beauty.css
+++ b/css/beauty.css
@@ -15,7 +15,11 @@
     float: right;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Hind+Siliguri:300,600|Martel:400,900); @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css); html {
+@import url(https://fonts.googleapis.com/css?family=Hind+Siliguri:300,600|Martel:400,900);
+
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css); 
+
+html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%
